[gd_scene load_steps=4 format=3 uid="uid://dhswdtxn3br1k"]

[ext_resource type="Script" path="res://main.gd" id="1_sq3j0"]
[ext_resource type="PackedScene" uid="uid://bfpcwdxh7nb3b" path="res://Main/Background.tscn" id="2_57473"]
[ext_resource type="StyleBox" uid="uid://b2nvujntkciaj" path="res://Main/menustyle.tres" id="3_pbksa"]

[node name="Main" type="Node2D"]
script = ExtResource("1_sq3j0")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_57473")]

[node name="StartMenu" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 536.0
offset_top = 288.0
offset_right = 1216.0
offset_bottom = 680.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("3_pbksa")

[node name="PlayButton" type="Button" parent="StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0705882
anchor_top = 0.163265
anchor_right = 0.914706
anchor_bottom = 0.346939
grow_horizontal = 2
grow_vertical = 2
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="LeaderBoard" type="Button" parent="StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0705882
anchor_top = 0.428571
anchor_right = 0.914706
anchor_bottom = 0.591837
grow_horizontal = 2
grow_vertical = 2
text = "Leaderboard"
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0705882
anchor_top = 0.673469
anchor_right = 0.914706
anchor_bottom = 0.836735
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="StartMenu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="StartMenu/LeaderBoard" to="." method="_on_leader_board_pressed"]
[connection signal="pressed" from="StartMenu/QuitButton" to="." method="_on_quit_button_pressed"]
